delete favicon.png and json setting

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,7 @@
 {
   "name": "Next.js Notion Starter Kit",
   "short_name": "Starter Kit",
-  "icons": [
-    {
-      "src": "/bonfire2.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    },
-    {
-      "src": "/bonfire2.png",
-      "type": "image/png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "/bonfire2.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    }
-  ],
+  "icons": [],
   "theme_color": "#000000",
   "background_color": "#000000",
   "display": "standalone"
