--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "react-notion-x": "^6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
-    "rss": "^1.2.2",
-    "react-ga": "^3.3.1"
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
